--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -99,7 +99,9 @@
             app:layout_constraintEnd_toStartOf="@id/textView_hora"
             app:layout_constraintStart_toEndOf="@id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/textView_user_nickname"
             app:name="@{conversation.contact}"
+            app:layout_constraintVertical_chainStyle="packed"
             app:nameFormat="@{displayFormat}"
             tools:text="@tools:sample/full_names"
             tools:visibility="visible" />
@@ -117,8 +119,8 @@
             app:contactIdNickNameFormat="@{conversation.contact.id}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@id/textView_hora"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
+            app:layout_constraintBottom_toTopOf="@id/linear_container"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
             app:nickNameFormat="@{displayFormat}"
             app:nickname="@{conversation.contact}"
@@ -132,7 +134,6 @@
             android:layout_marginStart="@dimen/normal_margin"
             android:layout_marginTop="@dimen/x_small_margin"
             android:layout_marginEnd="@dimen/normal_margin"
-            android:layout_marginBottom="@dimen/small_margin"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView_unread_messages"
