--- a/app/src/main/res/layout/add_contact_request_received_item.xml
+++ b/app/src/main/res/layout/add_contact_request_received_item.xml
@@ -31,13 +31,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/normal_margin"
-            android:layout_marginTop="@dimen/small_margin"
-            android:layout_marginBottom="@dimen/x_small_margin"
+            android:layout_marginEnd="@dimen/small_margin"
             android:ellipsize="end"
             android:lines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView_user_image"
             app:layout_constraintVertical_chainStyle="packed"
             app:name="@{contact.displayName}"
             tools:text="@tools:sample/full_names" />
@@ -47,10 +46,9 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:lines="1"
+            android:layout_marginEnd="@dimen/small_margin"
             android:textColor="?attr/attrColorButtonTint"
-            app:layout_constraintEnd_toEndOf="@id/textView_user_name"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
             app:nickname="@{contact.nickname}"
