--- a/app/src/main/res/layout/add_contact_request_sent_item.xml
+++ b/app/src/main/res/layout/add_contact_request_sent_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="contact"
             type="com.naposystems.napoleonchat.model.addContact.Contact" />
@@ -26,43 +27,33 @@
 
         <TextView
             android:id="@+id/textView_user_name"
-            style="@style/BodyTextView.Bold"
+            tyle="@style/BodyTextView.Bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/normal_margin"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
-            app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            android:layout_marginEnd="@dimen/small_margin"
+            android:ellipsize="end"
+            android:lines="1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView_user_image"
             app:layout_constraintVertical_chainStyle="packed"
             app:name="@{contact.displayName}"
             tools:text="@tools:sample/full_names" />
 
         <TextView
             android:id="@+id/textView_user_nickname"
+            style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/normal_margin"
-            android:ellipsize="end"
-            android:lines="1"
+            android:layout_marginEnd="@dimen/small_margin"
             android:textColor="?attr/attrColorButtonTint"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView_user_name"
-            app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
             app:nickname="@{contact.nickname}"
             tools:text="@tools:sample/first_names" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.7" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,7 +69,8 @@
             app:drawableStartCompat="@drawable/ic_check_primary"
             app:drawableTint="@color/green"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
